2003-12-17  Cesar Lopez Nataren  <cesar@ciencias.unam.mx>

	* CodeGenerator.cs: Added IL emittion for ldnull on default ending code for 'Global Code'.

2003-12-10  Cesar Lopez Nataren  <cesar@ciencias.unam.mx>

	* jscript-lexer-parser.g: added 'tokens { IN = "in"; INSTANCE_OF =
	"instanceof"; }' in order to be able to parse both keywords. When
	generating the parser, one warning about nondeterminism
	(k==1:"in") is generated ignore it.

2003-12-07  Cesar Lopez Nataren  <cesar@ciencias.unam.mx>

	* jscript-lexer-parser.g: things like 'new Point (10, 20).x' were
	not parsable now they are. Mozilla's and Janet's  test suites are
	being really helpful.

2003-12-05  Cesar Lopez Nataren  <cesar@ciencias.unam.mx>

	* jscript-lexer-parser.g: added check for non-null reference at
	var_decl_list rule. Added single quote STRING_LITERAL lexical rule
	and multiple lines comments rule.

	* jscript-lexer-parser.g: Now I keep track of the parent for most
	of the syntatic constructs. Fixed object_literal rule.

	* ast.cs: Added field parent. This will help me to track nested
	blocks for all of the syntatic constructs and will allow to Emit
	everything in one single pass.
	* FunctionDeclaration.cs, FunctionExpression.cs: Rearranged the
	parent stuff.
	* Block.cs, FunctionObject.cs: deleted parent field as AST will
	hold it. Delete parent parameter from constructor.
	* CodeGenerator.cs: Add field gc_ig (global code IL generator) to
	EmitContext class. The idea is Emitting everything in one pass (decls
	and 'Global Code' method, the parent reference let me know which IL
	generator use, gc_ig or ig).
	* Equality.cs, BooleanLiteral, Relational.cs: Added new parameter to
	constructor. Use new parent reference for choosing the IL
	generator. NumericLiteral a 'hard coded' int32 IL emittion added
	for testing. 
	* StringLiteral.cs, Literal.cs (BooleanLiteral.Emit): now I use
	the parent reference to infere which IL generator to use.